// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Duration /> Duration > 24h 1`] = `
<span>
  more than 24 hrs
</span>
`;

exports[`<Duration /> Duration - empty state 1`] = `
<span>
  N/A
</span>
`;

exports[`<Duration /> Duration 1`] = `
<span>
  4 sec
</span>
`;

exports[`<Duration /> Duration Dynamic 1`] = `
<span>
  <span>
    2 min 4 sec
  </span>
</span>
`;

exports[`<Duration /> Duration Dynamic with icon 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-clock fa-w-16 icon-addon-right"
    data-icon="clock"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm57.1 350.1L224.9 294c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v137.7l63.5 46.2c5.4 3.9 6.5 11.4 2.6 16.8l-28.2 38.8c-3.9 5.3-11.4 6.5-16.8 2.6z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <span>
    2 min 4 sec
  </span>
</span>
`;

exports[`<Duration /> Duration only 1`] = `
<span>
  26 min 26 sec
</span>
`;

exports[`<Duration /> Duration with icon 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-clock fa-w-16 icon-addon-right"
    data-icon="clock"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm57.1 350.1L224.9 294c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v137.7l63.5 46.2c5.4 3.9 6.5 11.4 2.6 16.8l-28.2 38.8c-3.9 5.3-11.4 6.5-16.8 2.6z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  4 sec
</span>
`;

exports[`<Duration /> should render 12 sec (ignore end time) 1`] = `
<span>
  12 sec
</span>
`;

exports[`<Duration /> should render 12 sec (ignore start time and end time) 1`] = `
<span>
  12 sec
</span>
`;

exports[`<Duration /> should render 12 sec (ignore start time) 1`] = `
<span>
  12 sec
</span>
`;
